--- a/index.html
+++ b/index.html
@@ -542,6 +542,13 @@
             <step-status title="Шаг 4" description="Результат" status="to do"></step-status>
         </sidebar-wrapp>
         <sidebar-wrapp>
+            <sidebar-header title="Шаги теста" subtitle="Добавьте шаги и заполните поля"></sidebar-header>
+            <string-element content="Старт рабоаты с приложением" status="pass"></string-element>
+            <string-element content="Нажатие на кнопку" status="pass"></string-element>
+            <string-element content="Добавление меток" status="failed"></string-element>
+            <string-element content="Результат" status="blocked"></string-element>
+        </sidebar-wrapp>
+        <sidebar-wrapp>
             <sidebar-header title="Требования" subtitle="Дерево требований к проекту "></sidebar-header>
             <tree-item title="1" description="Define preminely resources" level="1">
                 <tree-item title="1.1" description="Define preminely resources" level="2"></tree-item>
