added kanban component

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="import" href="components/sidebar-wrapp/dropdown-block.component.html">
     <link rel="import" href="components/step-status/step-status.component.html">
     <link rel="import" href="components/blocker/blocker-recomended-btn.component.html">
+    <link rel="import" href="components/kanban/kanban-desk.component.html">
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -279,16 +280,8 @@
                 <choose-btn title="Выбрать"></choose-btn>
             </sidebar-header>
 <!--
-            <feature-card>
-                <feature-card-header title="F.JVHB.0001" text="Mixed" input="20" time="10д 6ч" output="10"></feature-card-header>
-                <card-text title="Система управления сайтом">
-                    <div class="requirement-card-description">При помощи системы управления сайтом (ITCMS) структура и состав разделов сайта в дальнейшем могут быть изменены и дополнены.</div>
-                </card-text>
-                <feature-card-footer name="Васильченко С.В" doing></feature-card-footer>
-            </feature-card>
--->
            <feature-card>
-               <feature-card-header title="some" technology="Single" input="10" time="4д" output="4" detailed influence="high"></feature-card-header>
+               <feature-card-header title="some" technology="S ingle" input="10" time="4д" output="4" detailed influence="high"></feature-card-header>
                <card-text  title="Система управления сайтом">
                    <div class="requirement-card-description"></div>
                </card-text>
@@ -308,37 +301,29 @@
                 </card-text>
                 <feature-card-footer name="Васильченко С.В" done withtest tests="60" teststart testpass="39"></feature-card-footer>
             </feature-card>
+-->
             <feature-card>
 
                 <feature-card-header title="F.JVHB.0001" technology="Mixed" input="20" time="10д 6ч" output="10"></feature-card-header>
                 <card-text  title="Система управления сайтом">
                     <div class="requirement-card-description">При помощи системы управления сайтом (ITCMS) структура и состав разделов сайта в дальнейшем могут быть изменены и дополнены.</div>
                 </card-text>
-                <feature-card-footer name="Васильченко С.В" todo></feature-card-footer>
+                <feature-card-footer name="Васильченко С.В" done tests="10" teststart testpass="2"></feature-card-footer>
             </feature-card>
-            <feature-card>
 
-                <feature-card-header title="F.JVHB.0001" technology="Mixed" input="20" time="10д 6ч" output="10"></feature-card-header>
-                <card-text  title="Система управления сайтом">
-
-                    <div class="requirement-card-description"></div>
-                    <!--                    TEST-->
-                </card-text>
-                <feature-card-footer name="Васильченко С.В" waiting></feature-card-footer>
-            </feature-card>
             <requirement-card>
                 <requirement-card-header title="R.BI.YLMRK.2" name="Васильченко С.В" number="10"></requirement-card-header>
                 <card-text title="Личный кабинет пользователя">
                     <div class="requirement-card-description">В данном разделе авторизованному посетителю доступны информация о пользователе портала, либо свои личные данные</div>
                 </card-text>
-                <requirement-card-footer date="22.10.16" input="20" time="10д 6ч" output="10"></requirement-card-footer>
+                <requirement-card-footer approved date="22.10.16" input="20" time="10д 6ч" output="9" influence="high" functests="20" functestpass="3" accepttests="10" accepttestpass="9" teststart></requirement-card-footer>
             </requirement-card>
             <requirement-card>
                 <requirement-card-header title="R.BI.YLMRK.2" name="Васильченко С.В" number="10"></requirement-card-header>
                 <card-text title="Личный кабинет пользователя">
                     <div class="requirement-card-description">В данном разделе авторизованному посетителю доступны информация о пользователе портала, либо свои личные данные</div>
                 </card-text>
-                <requirement-card-footer date="22.10.16"></requirement-card-footer>
+                <requirement-card-footer date="22.10.16" input="10"></requirement-card-footer>
             </requirement-card>
         </sidebar-wrapp>
 
@@ -597,6 +582,42 @@
 
     </div>
 
+
+    <navbar-horizontal>
+        <navbar-breadcrumbs title="TEST CYCLES"></navbar-breadcrumbs>
+        <navbar-breadcrumbs title="ДИАГРАММА ГАНТА"></navbar-breadcrumbs>
+        <navbar-breadcrumbs title="ТАБЛИЦА ТРЕБОВАНИЙ"></navbar-breadcrumbs>
+        <navbar-breadcrumbs title="КАНБАН ДОСКА"></navbar-breadcrumbs>
+        <navbar-search-input>
+            <navbar-search-btn></navbar-search-btn>
+        </navbar-search-input>
+        <navbar-horizontal-project title="VVR"></navbar-horizontal-project>
+    </navbar-horizontal>
+    <div class="container">
+
+        <navbar-vertical>
+            <navbar-vertical-item title="проект"></navbar-vertical-item>
+            <!--            <navbar-vertical-item title="доступно"></navbar-vertical-item>-->
+            <!--            <navbar-vertical-item title="блокеры"></navbar-vertical-item>-->
+            <!--            <navbar-vertical-item title="связанные требования"></navbar-vertical-item>-->
+            <navbar-vertical-item title="зрители"></navbar-vertical-item>
+            <navbar-vertical-item title="файлы "></navbar-vertical-item>
+        </navbar-vertical>
+
+        <kanban-desk>
+            <sprint-header>
+                <sprint-name title="Спринт 1" subtitle="Канбан доска"></sprint-name>
+                <sprint-description title="Дата начала:" subtitle="2017-01-16"></sprint-description>
+                <sprint-description title="Дата выполнения" subtitle="2017-01-30"></sprint-description>
+                <sprint-description title="Выполнено" subtitle="24 задачи /142 ч"></sprint-description>
+                <sprint-task-progress title="72%"></sprint-task-progress>
+                <sprint-description title="Выполнено" subtitle="24 задачи /142 ч"></sprint-description>
+                <sprint-task-progress title="50%"></sprint-task-progress>
+            </sprint-header>
+            <person-task-wrapp name="Aлександр Ваисильченко"></erson-task-wrapp>
+        </kanban-desk>
+
+    </div>
 </body>
 
 </html>
