--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="components/sidebar-wrapp/sidebar-wrapp.component.html">
     <link rel="import" href="components/create-test/create-test.component.html">
-    <link rel="import" href="components/requirement/feature-card.component.html">
-    <link rel="import" href="components/requirement/requirement-card.component.html">
-    <link rel="import" href="components/requirement/choose-btn.component.html">
+    <link rel="import" href="components/cards/feature-card.component.html">
+    <link rel="import" href="components/cards/requirement-card.component.html">
+    <link rel="import" href="components/cards/choose-btn.component.html">
     <link rel="import" href="components/test-steps/info-message.component.html">
     <link rel="import" href="components/test-steps/step-drag'n'drop.component.html">
     <link rel="import" href="components/navbar/navbar-vertical.component.html">
@@ -280,7 +280,7 @@
                 <choose-btn title="Выбрать"></choose-btn>
             </sidebar-header>
 
-            <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+            <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart done>
                 <span>Загрузка pdf файлов в icloud и создание проекта</span>
             </feature-card>
 
