flex kanban desk cards

--- a/index.html
+++ b/index.html
@@ -608,6 +608,14 @@
                             <span>Загрузка pdf файлов в icloud и создание проекта</span>
                         </feature-card>
                     </kanban-cards-wrapp>
+                    <kanban-cards-wrapp title="waiting">
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                    </kanban-cards-wrapp>
                     <kanban-cards-wrapp title="READY TO WORK">
                         <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
                             <span>Загрузка pdf файлов в icloud и создание проекта</span>
@@ -652,8 +660,24 @@
             </person-task-wrapp>
             <person-task-wrapp name="Aлександр Ваисильченко">
                 <todo-wrapp>
-
-
+<!--
+                    <kanban-cards-wrapp title="waiting">
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                    </kanban-cards-wrapp>
+-->
+                    <kanban-cards-wrapp title="waiting">
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                    </kanban-cards-wrapp>
                     <kanban-cards-wrapp title="READY TO WORK">
                         <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
                             <span>Загрузка pdf файлов в icloud и создание проекта</span>
@@ -685,6 +709,11 @@
                         <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
                             <span>Загрузка pdf файлов в icloud и создание проекта</span>
                         </feature-card>
+                        <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
+                            <span>Загрузка pdf файлов в icloud и создание проекта</span>
+                        </feature-card>
+                    </kanban-cards-wrapp>
+                    <kanban-cards-wrapp title="in progress">
                         <feature-card title="F.JVHB.0001" technology="Разработка" input="20" time="10д 6ч" output="10" innerheader="Открытие проекта из PDF" name="Васильченко С.В" tests="5" testpass="4" teststart waiting>
                             <span>Загрузка pdf файлов в icloud и создание проекта</span>
                         </feature-card>
